# generator

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
doc/: pipeline.md
docs/: cap_array_grid_generator_v1.md  layout3d-developer-note.md  overview.md  pipeline.md
examples/: README.md  complex_layout.json  layout3d_invalid_wire_dup.json  layout3d_valid_minimal.json  simple_layout.json
examples/json/: cap_array_v0_1.json  layout3d_invalid_overlap.json  layout3d_invalid_wire_dup.json  res_array_v0_1.json  simple_layout.json
spec/: circuit-array-spec.md  circuit-array.schema.json
spec/examples/: cap_array.example.json
spec/fixtures/invalid/: cap_array_missing_plus_connected.json  res_array_invalid_connect_dummy.json
spec/fixtures/valid/: cap_array_minimal.json  cap_array_user_pattern.json  res_array_minimal.json
spec/schema/: circuit-array.schema.json
spec/templates/res_array/: v0.1.json
src/arraylayout/: __init__.py  cap_array_grid_generator.py  debug_cli.py  render_cli.py  validator.py
src/arraylayout/classification/: cap_array.py  grid.py  placement.py  res_array.py
src/circuit_array_spec/: __init__.py  cap_array_grid_generator.py  cap_array_grid_generator_v1.md  debug.py  derive.py  grid_classification.py  layout_skeleton.py  models.py  netlist.py  parser.py  res_array_grid_generator.py  res_array_grid_generator_v1.md  validator.py
src/gridlayout/: __init__.py
src/layout3d/: __init__.py  errors.py  normalize.py  parser.py  pipeline.py  render.py  render_demo.py  render_html.py  representation.py  types.py  validation.py
tasks/: codex-task.md
tests/: conftest.py  test_cap_array_grid_generator.py  test_circuit_array_spec.py  test_debug_cli.py  test_debug_helpers.py  test_derive.py  test_generators_api.py  test_grid_classification.py  test_layout3d.py  test_layout_skeleton.py  test_models.py  test_netlist.py  test_package_compatibility.py  test_pipeline_consistency.py  test_render.py  test_render_cli.py  test_res_array_grid_generator.py  test_semantic_enrichment.py  test_skeleton_to_layout.py  test_validation.py
(+56 files in other folders)
