[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-layout-generator"
version = "0.1.0"
description = "Tooling for generating grid-based circuit layouts from structured specifications"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "code4uh" }]
dependencies = [
    "pydantic>=2.6,<3",
    "jsonschema>=4.0",
    "Pillow>=10,<12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov>=7.1.0",
    "black",
    "ruff",
]

[project.scripts]
grid-layout-debug = "gridlayout.debug.cli:main"
grid-layout-render = "gridlayout.render.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
